<resources>
    <string name="app_name" translatable="false">Agenda Widget</string>
    <string name="app_widget_description">Agenda widget to display your upcoming events in a simple format</string>

    <string name="tap_to_set_up">%1$s needs access to your calendar to show your events.\n\n Tap here and grant access.</string>
    <string name="prefs_title_editing_default_config">Editing default configuration</string>
    <string name="prefs_title_general">General</string>
    <string name="prefs_title_date_time_location">Date and Time, Location</string>
    <string name="prefs_title_appearance">Appearance</string>
    <string name="select_calendars">Select calendars</string>
    <string name="number_of_days_to_display">Number of days to display</string>
    <string name="show_end_time">Show end time</string>
    <string name="show_action_buttons">Show action buttons</string>
    <string name="show_no_upcoming_events">Show no upcoming events text</string>
    <string name="use_12_hour_format">Use 12 hour format</string>
    <string name="show_location">Show location</string>
    <string name="date_separator_visible">Show date separator</string>
    <string name="align_widget_bottom">Bottom alignment</string>
    <string name="font_size">Font size</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>
    <string name="vertical_spacing">Vertical spacing</string>
    <string name="text_alignment">Text alignment</string>
    <string name="text_alignment_left">Left</string>
    <string name="text_alignment_center">Center</string>
    <string name="text_alignment_right">Right</string>
    <string name="text_color">Text color</string>
    <string name="background_color">Background color</string>
    <string name="background_opacity">Background opacity</string>
    <string name="color_picker_presets">Presets</string>
    <string name="color_picker_spectrum">Spectrum</string>
    <string name="color_picker_hex">Hex</string>
    <string name="color_picker_hue">Hue</string>
    <string name="color_picker_saturation">Saturation</string>
    <string name="color_picker_brightness">Brightness</string>
    <string name="color_picker_select">Select</string>
    <string name="color_picker_hex_label">Hex color (e.g. #FF5500)</string>
    <string name="color_picker_hex_error">Invalid hex color</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="calendar_access_info">Agenda Widget needs access to your calendar to display events. Please grant the calendar permissions to use the widget.</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_upcoming_events">No upcoming events</string>

    <string name="active_widgets">Widget configuration</string>
    <string name="default_configuration">Default configuration</string>

    <string name="date_placeholder">Date placeholder</string>
    <string name="event_placeholder">Event placeholder</string>

    <string name="agenda_widget_updated">Agenda Widget Updated</string>

    <string name="onboarding_0">Welcome to Agenda Widget! Follow these instructions to add it to your home screen.</string>
    <string name="onboarding_1">To add Agenda Widget, long press on the home screen</string>
    <string name="onboarding_2">Select Widgets from the home screen options menu</string>
    <string name="onboarding_3">Drag Agenda Widget to your home screen. You\'re all set!</string>

    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_got_it">Got it</string>


    <string name="preview_item_1">11:15 – 12:00 | Project X meeting</string>
    <string name="preview_item_2">17:00 – 18:00 | Football</string>
    <string name="preview_item_3">Jack\'s birthday</string>

    <string name="battery_optimization_warning">Tap to disable battery optimization for reliable widget updates</string>

    <string name="show_calendar_blob">Show calendar blob</string>
    <string name="configure_calendar_blobs">Configure calendar blobs</string>
    <string name="title_color">Color</string>
    <string name="title_emoji">Emoji</string>
    <string name="label_none">None</string>
    <string name="indicator_style">Indicator style</string>
    <string name="style_colors">Colors</string>
    <string name="style_emojis">Emojis</string>

    <!-- Task Integration -->
    <string name="prefs_title_tasks">Tasks</string>
    <string name="show_tasks">Show tasks</string>
    <string name="select_task_calendars">Select task calendars</string>
    <string name="show_completed_tasks">Show completed tasks</string>
    <string name="task_placeholder">Task placeholder</string>
    <string name="task_checkbox">Task checkbox</string>
    <string name="no_due_date">No due date</string>
</resources>